# agenticaiautomation

./: README.md
ai_job_application/: README.md  pyproject.toml
ai_job_application/db/: chroma.sqlite3
ai_job_application/src/ai_job_application/: main.py
ai_job_application/src/ai_job_application/config/: tasks.yaml
instagram_post/: README.md
stock_analysis/: README.md
trip_planner/: README.md
